--- a/HttpHandlers/Web.config
+++ b/HttpHandlers/Web.config
@@ -9,6 +9,11 @@
     <compilation debug="true" targetFramework="4.7"/>
     <httpRuntime targetFramework="4.7"/>
   </system.web>
+  <system.webServer>
+    <handlers>
+      <add name="MyFirstHandler" verb="GET" path="MyHandler.apsx" type="HttpHandler.MyFirstHandler"/>
+    </handlers>
+  </system.webServer>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
